3:Fixes excessive nesting and styles
Corrects excessive nesting and styles, removes unnecessary styles and comments

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -7,10 +7,15 @@
 	--font-second:'Noto Music', sans-serif;
 	--page-bg: #fff;
 	--text-color: #fff;
+	--text-color-gray: #F6F6F680;
 	--accent: #ac182c;
-
+	--orange:#F79C1B;
+	--black:black;
 	--font-size: 16px;
-
+	--background:#515151;
+	--gray:#1A1A1A80;
+	--gray-light: #EBEBEB;
+	--gray-opacity: rgba(235, 235, 235,0.5); 
     --laptop-size: 1199px;
 	--tablet-size: 959px;
 	--mobile-size: 599px;
