--- a/src/scss/base/_containers.scss
+++ b/src/scss/base/_containers.scss
@@ -1,10 +1,9 @@
-.container {
-
-
+[class*="__container"] {
 	padding: 0 var(--container-padding);
 	max-width: var(--container-width);
 	margin: 0 auto;
 }
+
 
 .container-right {
 	/* overflow-x: hidden; */
