--- a/src/scss/blocks/_auth.scss
+++ b/src/scss/blocks/_auth.scss
@@ -1,19 +1,18 @@
 .auth {
-    background-image: url('./../../img/bg.jpeg'); /* Замените на фактический путь */
+    background-image: url('./../../img/bg.jpeg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    overflow: hidden; /* Скрыть часть изображения при увеличении */
+    overflow: hidden; 
     height: 100vh;
     color: black;
-    // .auth__title
 
     &__title {
         font-size: 40px;
         font-weight: 500;
     }
 }
-.modal {
+.auth__modal {
     padding: 52px 128px 89px;
     position: absolute;
     top: 50%;
@@ -26,14 +25,11 @@
     max-width: 585px;
     width: 100%;
     height: 548px;
-    // align-items: center;
-    // justify-content: center;
 }
 .auth-form {
     display: flex;
     flex-direction: column;
     gap: 98px;
-    // .auth-form__inputs
 
     &__inputs {
         display: flex;
@@ -41,34 +37,31 @@
         gap: 48px;
     }
 
-    // .auth-form__input
-
     &__input {
         padding: 8px 33px;
         max-width: 350px;
         width: 100%;
-        border: 1px solid #F79C1B;
+        border: 1px solid var(--orange);
         height: 50px;
 
         &::placeholder {
-            color: #1A1A1A80;
+            color: var(--gray);
             font-weight: 300;
         }
     }
-
-    // .auth-form__btn
 
     &__btn {
         height: 50px;
         padding: 8px 33px;
         max-width: 350px;
         width: 100%;
-        background-color: #F79C1B;
+        background-color: var(--orange);
         color: #fff;
-        border: 1px solid #F79C1B;
-        transition: all 0.3s ease-in;
+        border: 1px solid var(--orange);
+        transition:hover 0.3s ease-in;
+        
         &:hover {
-            background-color: #c77e19;
-            }
+            background-color: var(--orange);
+        }
     }
 }
