--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 30px;
-    overflow: hidden; /* предотвращает выход содержимого за границы */
+    overflow: hidden; 
     position: relative;
     margin-bottom: 40px;
 
@@ -20,18 +20,18 @@
 
 .card__image {
     width: 100%;
-    height: auto; /* можно задать фиксированную высоту для контейнера */
-    overflow: hidden; /* предотвращает выход изображения за границы контейнера */
+    height: auto; 
+    overflow: hidden; 
     position: relative;
 }
 
 .card__img {
     cursor: pointer;
     width: 100%;
-    height: 100%; /* изображение будет занимать всю высоту контейнера */
+    height: 100%; 
     object-fit: cover;
     object-position: center;
-    transition: all 0.3s ease-in;
+    transition:transform 0.3s ease-in;
 }
 
 .card__image:hover .card__img {
@@ -43,7 +43,7 @@
     display: inline-block;
     font-size: 18px;
     font-weight: bold;
-    transition: all 0.3s ease-in;
+    transition:hover  0.3s ease-in;
     border-bottom: 2px solid transparent;
 }
 
@@ -58,5 +58,3 @@
 .card_grid {
     width: 100%;
 }
-
-
