--- a/src/scss/blocks/_delivery.scss
+++ b/src/scss/blocks/_delivery.scss
@@ -2,13 +2,13 @@
     padding: 166px 0;
     display: flex;
     width: 100%;
-    color: black;
+    color: var(--black);
     position: relative;
-    background-image: url('./../../img/delivery.jpeg'); // Замените на фактический путь
+    background-image: url('./../../img/delivery.jpeg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    overflow: hidden; // Скрыть часть изображения при увеличении
+    overflow: hidden; 
 
     &::before {
         content: '';
@@ -17,7 +17,7 @@
         left: 0;
         width: 50%;
         height: 100%;
-        background-color: #EBEBEB; // Цвет фона стал оранжевым
+        background-color: #EBEBEB; 
         z-index: 1;
 
         @media (max-width: 700px) {
@@ -37,19 +37,19 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        transition: transform 0.3s ease;
+        transition:transform 0.3s ease;
         z-index: 0;
     }
 
     &:hover::after {
-        transform: scale(1.1); // Увеличить изображение на 10% при наведении
+        transform: scale(1.1);
     }
 
-    .container_delivery {
+    &__container_delivery {
         position: relative;
         width: 100%;
         height: 100%;
-        z-index: 2; // Поверх фонового изображения
+        z-index: 2; 
     }
 
     .delivery__block {
@@ -59,7 +59,7 @@
         padding: 20px;
         box-sizing: border-box;
         position: relative;
-        z-index: 3; // Поверх изображения
+        z-index: 3;
         margin-right: 0;
     }
 
@@ -112,6 +112,7 @@
         cursor: pointer;
         width: 100%;
         max-width: 230px;
+        transition: background-color 0.3s ease-in;
 
         &:hover {
             background-color: #c77e19;
@@ -123,4 +124,3 @@
         padding: 71px 0 88px;
     }
 }
-
