--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,18 +1,16 @@
 .footer {
-	background-color: #515151;
+	background-color: var(--background);
 	padding: 35px 0 109px;
 	font-size: 32px;
-    color: #fff;
+    color: var(--text-color);
 	position: absolute;
 	bottom: 0;
 	width: 100%;
 	left: 0;
 	z-index: -1;
 
-
 	&__logo {
 		display: flex;
-	// align-items: center;
 		flex-direction: column;
 
 		@media (max-width: 500px) {
@@ -23,9 +21,7 @@
 	&__title {
 		font-size: 43px;
 		font-weight: 600;
-		color: #F79C1B;
-
-	
+		color: var(--orange);
 
 		@media (max-width: 800px) {
 			font-size: 30px;
@@ -40,7 +36,7 @@
 	&__text {
 		font-size: 12px;
 		font-weight: 300;
-		color: #F6F6F680;
+		color: var(--text-color-gray);
 	}
 	&__content {
 		display: flex;
@@ -87,15 +83,16 @@
 
 	&__btn{
 		font-size:16px;
-		border:1px solid #F79C1B;
-		color:#F79C1B;
+		border:1px solid var(--orange);
+		color:var(--orange);
 		padding: 6px 22px;
 		background-color:transparent;
 		align-self: flex-start;
-		transition: all 0.3s ease-in;
+		transition: color 0.3s ease-in, background-color 0.3s ease-in;
+
 		&:hover{
-			background-color: #F79C1B;
-			color: #fff;
+			background-color: var(--orange);
+			color: var(--text-color);
 		}
 
 		@media (max-width: 800px) {
@@ -117,21 +114,10 @@
 		font-size: 26px;
 	}
 
-	&_bg{
-		// position: static;
-	}
-
 	@media (max-width: 590px) {
 		padding: 35px 0 120px;
 	}
 
-	@media (max-width: 500px) {
-		// display: grid;
-		// justify-items:center;
-		// align-items: center;
-		// justify-content: center;
-		// font-size: 20px;
-	}
 }
 
 .item-footer{
@@ -152,18 +138,14 @@
 		}
 	}
 	
-	&__item{
-		// font-size: 16px;
-	}
-
 	&__link{
 		font-size: 16px;
 		font-weight: 300;
 		line-height: 26px;
-		transition: all 0.2s ease-in;
+		transition:hover 0.2s ease-in;
 
 		&:hover{
-			border-bottom: 1px solid #F79C1B;
+			border-bottom: 1px solid var(--orange);
 		}
 
 		@media (max-width: 700px) {
