--- a/src/scss/blocks/_kitchen.scss
+++ b/src/scss/blocks/_kitchen.scss
@@ -2,14 +2,11 @@
     max-width: 100%;
     height: 100vh;
     
-    &__bg{
-
-    }
-
     &__img{
         width: 100%;
         height: 100vh;
-        // object-fit: cover;
+        object-fit: cover;
+        
         @media (max-width: 450px) {
             height: 500px;
         }
