--- a/src/scss/blocks/_materials_kitchens.scss
+++ b/src/scss/blocks/_materials_kitchens.scss
@@ -1,6 +1,6 @@
 .material{
     padding: 160px 0;
-    color: black;
+    color: var(--black);
 
     &__content{
         display: flex;
@@ -16,14 +16,12 @@
         text-align: center;
         font-size: 40px;
         font-weight: 500;
-        
     }
 
     &__items{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: 1fr;
-        // gap: 40px;
         justify-items: center;
         align-items: flex-start;
 
@@ -43,5 +41,4 @@
     @media (max-width: 600px) {
         padding: 38px 0;
     }
-
 }
