--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -1,25 +1,18 @@
 .mobile-nav {
 	position: fixed;
-	// top: 0;
 	top: -100%;
 	width: 100%;
 	height: 100vh;
     z-index: 99;
-	color: #000000;
+	color: var(--black);
 	display: flex;
     flex-direction: column;
     align-items: center;
 	justify-content: center;
     padding-top: 120px;
     padding-bottom: 40px;
-	// color: #fff;
-    // background: linear-gradient(209deg, #4287b3 -17.38%, #133f6b 78.4%), #276195;
-	background: #fff;
+	background: var(--text-color);
 	transition: all 0.2s ease-in;
-
-	&__link{
-	
-	}
 
 	&__btns{
 		display: flex;
@@ -28,18 +21,17 @@
 	}
 	
 	&__btn{
-		// max-width: 250px;
 		width: 250px;
-		background-color: #F79C1B;
-		color: #fff;
+		background-color: var(--orange);
+		color: var(--text-color);
 		padding: 10px 18px;
 		font-weight: 500;
 		line-height: 32px;
 
 		&_auth{
 			background-color: transparent;
-			color: #F79C1B;
-			border: 1px solid #F79C1B;
+			color: var(--orange);
+			border: 1px solid var(--orange);
 		}
 	}
 }
@@ -49,7 +41,7 @@
 }
 
 .mobile-nav a {
-	color: #000000;
+	color: var(--black);
 }
 
 .mobile-nav__list {
@@ -65,13 +57,12 @@
 		&::after{
 			content: "";
 			position: absolute;
-			left: -50vw; /* Сдвинуть линию влево */
-			right: -50vw; /* Сдвинуть линию вправо */
-			bottom: -20px; /* Отступ снизу от текста */
-			width: 200vw; /* Сделать линию шириной в два экрана */
-			border-bottom: 1px dashed rgba(0, 0, 0,0.5); /* Цвет и толщина полосы */
+			left: -50vw; 
+			right: -50vw; 
+			bottom: -20px; 
+			width: 200vw; 
+			border-bottom: 1px dashed rgba(0, 0, 0,0.5); 
 		}
-		
 	}
 
 	& .active {
