--- a/src/scss/blocks/_swiper.scss
+++ b/src/scss/blocks/_swiper.scss
@@ -1,6 +1,5 @@
 .swiper{
-
-    color: black;
+    color: var(--black);
 
     &__top{
         display: flex;
@@ -38,16 +37,11 @@
 
         @media (max-width: 850px) {
             gap: 5px;
-            // grid-template-columns: repeat(2, 1fr);
-        }
-
-        @media (max-width: 670px) {
-        
         }
     }
 
     &__title{
-        color:#1A1A1A;
+        color: var(--black);
         font-weight: bold;
         font-size:40px;
 
