--- a/src/templates/Main/components/Production/templates/.default/style.css
+++ b/src/templates/Main/components/Production/templates/.default/style.css
@@ -5,30 +5,31 @@
     color: var(--orange);
     position: relative;
     background-color: var(--gray-light);
-    overflow: hidden;
+    gap: 20px;
+    z-index: 10;
 }
 
-.production .production__bg-wrapper {
+.production__wrapper {
     position: absolute;
     top: 0;
     left: 0;
     width: 50%;
     height: 100%;
     overflow: hidden;
-    z-index: 1;
 }
 
 @media (max-width: 700px) {
-    .production .production__bg-wrapper {
+    .production__wrapper {
         width: 100%;
-        z-index: 1;
+        z-index: -1;
     }
 }
 
 .production .production__bg {
     width: 100%;
     height: 100%;
-    background-image: url("./../../img/production.jpeg");
+    background-image: url("./../../../../../../img/production.jpeg");
+    /* Замените на фактический путь */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -42,10 +43,17 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(235, 235, 235, 0.5);
+    background-color: var(--gray-opacity);
 }
 
-.production .production__bg-wrapper:hover .production__bg {
+@media (max-width: 700px) {
+    .production .production__bg {
+        width: 100%;
+        z-index: -1;
+    }
+}
+
+.production .production__wrapper:hover .production__bg {
     transform: scale(1.1);
 }
 
@@ -56,7 +64,10 @@
     width: 100%;
     height: 100%;
     position: relative;
-    z-index: 2;
+}
+
+.production__bg {
+    min-width: 100%;
 }
 
 .production .production__block {
@@ -66,7 +77,7 @@
     padding: 20px;
     box-sizing: border-box;
     position: relative;
-    z-index: 3;
+    z-index: 1;
     margin-right: 0;
 }
 
@@ -81,8 +92,7 @@
     margin-bottom: 20px;
     font-size: 40px;
     font-weight: 500;
-    text-align: justify;
-    align-self: flex-end;
+    text-align: right;
 }
 
 .production .production__title:not(:last-child) {
@@ -103,8 +113,8 @@
 
 @media (max-width: 700px) {
     .production .production__title {
-        font-size: 40px;
         text-align: left;
+        font-size: 40px;
     }
 }
 
@@ -144,6 +154,7 @@
     cursor: pointer;
     width: 100%;
     max-width: 230px;
+    transition: background-color 0.3s ease-in;
 }
 
 .production .production__btn:hover {
@@ -152,6 +163,7 @@
 
 @media (max-width: 700px) {
     .production {
-        padding: 65px 0;
+        min-width: 100%;
+        padding: 70px 0 157px;
     }
 }
