--- a/src/templates/Main/components/Auth/templates/.default/style.css
+++ b/src/templates/Main/components/Auth/templates/.default/style.css
@@ -1,3 +1,8 @@
+main {
+    flex: 1;
+    height: 100vh;
+}
+
 .auth {
     background-image: url("./../../img/bg.jpeg");
     background-size: cover;
@@ -14,26 +19,26 @@
 }
 
 .auth__modal {
-    padding: 52px 128px 89px;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -60%);
+    transform: translate(-50%, -50%);
+    padding: 30px;
     background-color: rgba(255, 255, 255, 0.9);
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
+    gap: 20px;
     max-width: 585px;
     width: 100%;
-    height: 500px;
+    height: 550px;
     z-index: 1000;
 }
 
 .auth-form {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 20px;
 }
 
 .auth-form__inputs {
