--- a/src/templates/Main/css/main.css
+++ b/src/templates/Main/css/main.css
@@ -89,7 +89,7 @@ body {
 .header {
     background-color: rgba(0, 0, 0, 0.6);
     padding: 30px 5vw;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -342,7 +342,7 @@ footer {
     padding: 35px 0 50px;
     font-size: 32px;
     color: #fff;
-    position: static;
+    position: relative;
     bottom: 0;
     width: 100%;
     left: 0;
