--- a/src/templates/Main/components/Auth/templates/.default/style.css
+++ b/src/templates/Main/components/Auth/templates/.default/style.css
@@ -54,6 +54,17 @@ main {
     border: 1px solid var(--orange);
     height: 50px;
 }
+.auth-form__buttons{
+    display: flex;
+    gap: 20px;
+}
+.auth-form__link{
+    transition: color .3s ease-in;
+}
+
+.auth-form__link:hover {
+    color: var(--orange);
+}
 
 .auth-form__input::placeholder {
     color: var(--gray);
@@ -104,4 +115,16 @@ main {
     .button {
         font-size: 16px;
     }
+}
+
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    z-index: 1000;
 }
